load("@rules_cc//cc:defs.bzl", "cc_test","cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "che_data_format_lib",
    hdrs = [
        "CheDataFormat.h",
    ],
    srcs = [
        "CheDataFormat.cpp",
    ],
    deps = [
        "//util:safe_armadillo_headers",
    ]
)
